--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="bg-white pt-[100px]"></div>
+    <div id="root" class="bg-white dark:bg-slate-dark pt-[100px]"></div>
   </body>
 </html>
