--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
               "sky": "#0EA5E9",
               "sky-dark": "#0369A1",
               "slate": "#0F172A",
-              "slate-dark": "#020617"
+              "slate-dark": "#020617",
+              "red": "#EF4444"
             }
           },
           fontFamily: {
@@ -47,6 +48,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="bg-white dark:bg-slate-dark pt-[100px]"></div>
+    <div id="root" class="h-full w-full bg-white dark:bg-slate-dark pt-[100px]"></div>
   </body>
 </html>
