--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" class="w-full h-full">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -48,6 +48,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="h-full w-full bg-white dark:bg-slate-dark pt-[100px]"></div>
+    <div id="root" class="overflow-y-scroll h-full w-full bg-white dark:bg-slate-dark pt-[100px]"></div>
   </body>
 </html>
