--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="overflow-y-scroll h-full w-full bg-white dark:bg-slate-dark pt-[100px]"></div>
+    <div id="root" class="overflow-y-scroll h-full w-full bg-white dark:bg-slate-dark"></div>
   </body>
 </html>
